удален неиспользуемый файл

--- a/public/index.html
+++ b/public/index.html
@@ -8,9 +8,7 @@
   <meta name="description" content="Mesto React" />
 
 
-  <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-
-  <title>Mesto</title>
+  <title>Место</title>
 </head>
 
 <body>
